--- a/app/views/conversions/_form.html.erb
+++ b/app/views/conversions/_form.html.erb
@@ -1,32 +1,8 @@
-<%= form_for(conversion) do |f| %>
-  <% if conversion.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(conversion.errors.count, "error") %> prohibited this conversion from being saved:</h2>
-
-      <ul>
-      <% conversion.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<div class="form-box form-box--small ballon--up">
+  <%= simple_form_for(conversion, html: { class: 'form form--with-border' }) do |f| %>
+    <%= f.input :audio_url %>
+    <%= f.input :image_url %>
+    <%= f.input :email %>
+    <%= f.button :submit %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :audio_url %>
-    <%= f.text_field :audio_url %>
-  </div>
-
-  <div class="field">
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
