--- a/app/views/conversions/_form.html.erb
+++ b/app/views/conversions/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.input :audio_url %>
     <%= f.input :image_url %>
     <%= f.input :email %>
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Criar Video' %>
   <% end %>
 </div>
