--- a/app/assets/stylesheets/base/_layout.sass
+++ b/app/assets/stylesheets/base/_layout.sass
@@ -39,3 +39,10 @@ img, picture
 blockquote
   margin: 0
   padding: 0
+
+.loader
+  display: block
+  margin: 0 auto
+  +clearfix
+  div
+    background-color: $accent-color
