--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <header class="header header--homepage header--center">
       <div class="wrapper">
-        <h1 class="header__logo-text"><a href="/">Megafono</a> </h1>
+        <h1 class="header__logo-text"><a href="http://megafono.io">Megafono</a> </h1>
       </div>
     </header>
     <div class="wrapper wrapper--margin">
